styles.css
:root {
  --cta-blue: #3882f6;
  --dark-bg: #1f2937;
  --light-gray: #e5e7eb;
  --light-text: #f9faf8;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 64px;
}

nav > ul {
  display: flex;
  gap: 18px;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
}

.header-container {
  background-color: var(--dark-bg);
}

.header-title {
  color: var(--light-text);
  font-size: 48px;
  font-weight: 900;
}

a,
.header-description {
  color: var(--light-gray);
  font-size: 18px;
}

.header-title,
.header-description {
  margin-bottom: 12px;
}

.header-logo {
  color: var(--light-text);
  font-size: 24px;
  font-weight: 700;
}

.header-info {
  display: flex;
  flex-wrap: wrap;
  gap: 24px;
}

.header-placeholder {
  flex: 1 1 350px;
}

.header-image {
  flex: 1 1 450px;
}

.singup-btn {
  padding: 8px 32px;
  border: 1px var(--cta-blue) solid;
  border-radius: 12px;
  color: #fff;
  cursor: pointer;
  background-color: var(--cta-blue);
  font-size: 18px;
}

.content-wrapper {
  max-width: 1200px;
  padding: 36px;
  margin: 0 auto;
}

.random-container {
  padding: 12px 0 36px;
}

.random-title {
  margin-bottom: 36px;
  color: var(--dark-bg);
  font-size: 36px;
  font-weight: 900;
  text-align: center;
}

.box-container {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  gap: 36px;
}

.box {
  flex: 0 1 200px;
}

.box-image {
  height: 200px;
  margin-bottom: 12px;
  border: 4px solid var(--cta-blue);
  border-radius: 12px;
}

.box-description {
  color: var(--dark-bg);
  text-align: center;
}

